--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Rio Collective — Chicago Barbers</title>
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="/riocollective-preview/style.css">
+
 </head>
 <body>
 
@@ -198,3 +199,4 @@
 
 </body>
 </html>
+
