--- a/services.html
+++ b/services.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="assets/css/style.css" />
+ <link rel="stylesheet" href="/riocollective-preview/style.css">
+
   <title>The Rio Collective — Services</title>
 </head>
 <body>
@@ -191,3 +192,4 @@
 
 </body>
 </html>
+
