--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact — The Rio Collective</title>
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="/riocollective-preview/style.css">
+
 </head>
 <body>
 
@@ -53,3 +54,4 @@
 
 </body>
 </html>
+
