--- a/barbers.html
+++ b/barbers.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="/riocollective-preview/style.css">
   <title>The Rio Collective — Barbers</title>
 </head>
 <body>
@@ -120,3 +120,4 @@
 
 </body>
 </html>
+
