--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About — The Rio Collective</title>
-  <link rel="stylesheet" href="assets/css/style.css" />
+ <link rel="stylesheet" href="/riocollective-preview/style.css">
+
 </head>
 <body>
 
@@ -41,3 +42,4 @@
 
 </body>
 </html>
+
